fix list spacing

--- a/assets/styles/PBA-theme.css
+++ b/assets/styles/PBA-theme.css
@@ -260,14 +260,19 @@ pba-flex[right] {
 	line-height: 1.2;
 }
 
+.reveal ol li,
+.reveal ul li {
+	margin: 0.5em 0em 0.5em 0em;
+}
+
 .reveal ul {
 	/* Remove default bullets/numbers on lists */
 	list-style: none !important;
+	padding-left:2em;
 }
 
 .reveal ol li {
   counter-increment: count-ol;
-
 }
 
 .reveal ul li::before {
@@ -275,7 +280,8 @@ pba-flex[right] {
 	font-size: 0.8em;
 	line-height: 1.5em;
 	position: absolute;
-	left: -1em;
+	padding-left: 2em;
+	left: -0.5em;
 	font-family: monospace;
 	/* CSS Code/unicode, hex: https://www.w3schools.com/charsets/ref_utf_symbols.asp */
 	content: "\2688";
